[package]
name = "chooser_v1"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.10.21"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.3"


[lib]
crate-type = ["cdylib", "lib"]

