[package]
name = "solana_rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
bytemuck = { version = "1.13.1", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.6.1"
spl-discriminator = "0.1.0"
spl-type-length-value = "0.3.0"
spl-tlv-account-resolution = "0.4.0"
solana-sdk = "1.16.7"
solana-client = "1.16.7"
solana-program = "1.16.7"
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
spl-token-2022 = {version = "0.9.0", features = ["no-entrypoint"]}
borsh = "0.10.3"
solana-transaction-status = "1.16.0"
rand = "0.7.0"
spl-associated-token-account = "2.0"
enum-map = "1.1.1"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
