[package]
name = "transfer_hook"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.24"
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.3"
spl-associated-token-account = {version = "1.1.3", features = ["no-entrypoint"]}
enum-map = "1.1.1"
spl-token-2022 = {version = "0.7", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]
