[package]
name = "transfer_hook"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.16.7"
thiserror = "1.0.24"
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.3"
spl-associated-token-account = {version = "1.1.3", features = ["no-entrypoint"]}
enum-map = "1.1.1"
spl-token-2022 = {version = "0.9.0", features = ["no-entrypoint"]}
spl-discriminator = "0.1.0"
spl-type-length-value = "0.3.0"
spl-tlv-account-resolution = "0.4.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
